--- a/admin.html
+++ b/admin.html
@@ -154,12 +154,12 @@
         <nav aria-label="Page navigation example">
           <ul class="pagination">
             <li class="page-item">
-              <a class="page-link" href="#" aria-label="Previous">
+              <a class="page-link" href="index.html" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
               </a>
             </li>
             <li class="page-item">
-              <a class="page-link" href="./admin.html">1</a>
+              <a class="page-link" href="index.html">1</a>
             </li>
             <li class="page-item">
               <a class="page-link" href="#" aria-label="Next">
