--- a/admin.html
+++ b/admin.html
@@ -159,10 +159,10 @@
               </a>
             </li>
             <li class="page-item">
-              <a class="page-link" href="index.html">1</a>
+              <a class="page-link" href="#">1</a>
             </li>
             <li class="page-item">
-              <a class="page-link" href="#" aria-label="Next">
+              <a class="page-link" href="index.html" aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
               </a>
             </li>
