--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <li>All Status</li>
           <li>For Rent</li>
           <li>For Sale</li>
+          <li><a href="./admin.html">To admin page</a></li>
         </ul>
       </form>
       <!-- search part -->
