--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <div id="propertiess">
         <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
+          <img src="./beach2.jpg" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">this is what it is</h5>
             <p class="card-text">
